# Vox

./: Cargo.toml  compile_shaders.bat  run.bat
crates/VoxAPI/: Cargo.toml
crates/VoxAPI/src/: api.json  lib.rs
crates/VoxECS/: Cargo.toml
crates/VoxECS/src/: lib.rs
crates/VoxInternal/: Cargo.toml
crates/VoxInternal/src/: lib.rs
crates/VoxRender/: Cargo.toml
crates/vox_api/: Cargo.toml
crates/vox_api/src/: lib.rs
crates/vox_ecs/: Cargo.toml
crates/vox_ecs/src/: components.rs  lib.rs
crates/vox_internal/: Cargo.toml
crates/vox_internal/src/: lib.rs
crates/vox_render/: Cargo.toml
crates/vox_render/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
crates/vox_render/src/: lib.rs
examples/: hello_world.rs  moving_triangle.rs  sprite.rs
examples/ecs_app/: Cargo.toml
examples/ecs_app/src/: main.rs
src/: lib.rs
