[package]
name = "Vox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resources = "1.1.0"
VoxInternal = {path = "crates/VoxInternal"}

[workspace]
exclude = ["thirdparty"]
members = [
    "crates/*"
]

[features]
default = [
    "vox_ecs"
]
vox_ecs = ["VoxInternal/VoxECS"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "sprite"
path = "examples/sprite.rs"



