[package]
name = "Vox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resources = "1.1.0"
vox_internal = {path = "crates/vox_internal"}

[workspace]
exclude = ["thirdparty"]
members = [
    "crates/*"
]

[features]
default = [
    "vox_api",
    "vox_ecs",
    "vox_render"
]
vox_api = ["vox_internal/vox_api"]
vox_ecs = ["vox_internal/vox_ecs"]
vox_render = ["vox_internal/vox_render"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "sprite"
path = "examples/sprite.rs"

[[example]]
name = "moving_triangle"
path = "examples/moving_triangle.rs"




