[package]
name = "VoxECS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
VoxAPI = {path="../VoxAPI"}
proc-macro2 = "1.0.39"
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"

[lib]
proc_macro = true

