[package]
name = "vox_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
wgpu = "0.12.0"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
pollster = "0.2.5"
vox_ecs = {path="../vox_ecs"}
vox_render = {path="../vox_render"}