[package]
name = "vox_internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vox_api = {path="../vox_api", optional=true}
vox_ecs = {path="../vox_ecs", optional=true}
vox_render = {path="../vox_render", optional=true}
