[package]
name = "vox_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
image = "0.24.2"
wgpu = {version = "0.12.0", features = ["spirv"]}
winit = "0.26.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
utils = {path="../../thirdparty/utils"}